[workspace]
members = [
    "crates/ws-net-common",
    "crates/ws-net-gateway",
    "crates/ws-net-access",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
futures-util = "0.3"
hyper = "1"
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio", "service"] }
rcgen = { version = "0.12", default-features = false, features = ["pem", "ring"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
ws-net-common = { path = "crates/ws-net-common" }
