[package]
name = "ws-net-access"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
dashmap.workspace = true
hyper.workspace = true
hyper-util.workspace = true
rcgen.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
ws-net-common.workspace = true
