[package]
name = "ws-net-gateway"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
dashmap.workspace = true
futures-util.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ws-net-common.workspace = true
